Manage to merge bank and firm interface to hacker1

--- a/firm-interface/index.html
+++ b/firm-interface/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bank Interface</title>
+    <title>Firm Interface</title>
+    <base href="/firm/" />
   </head>
   <body>
-    <div id="root"><!-- React will render here --></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
